--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -6,7 +6,7 @@ spring:
     driver-class-name: com.mysql.cj.jdbc.Driver
   jpa:
     hibernate:
-      ddl-auto: create
+      ddl-auto: update
   properties:
     hibernate:
   # show_sql: true
@@ -15,3 +15,5 @@ logging:
   level:
     org.hibernate.SQL: debug
     org.hiberante.type: trace
+server:
+  port: 3005
