feat: member update V2

--- a/.gitignore
+++ b/.gitignore
@@ -14,7 +14,8 @@ build/
 /src/.env
 
 # application properties
-# /src/main/**/application.properties
+/src/main/**/application.yml
+/src/main/resources/application.yml
 
 ### STS ###
 .apt_generated
