--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -11,6 +11,9 @@ spring:
     hibernate:
   # show_sql: true
       format_sql: true
+  devtools:
+    restart:
+      enabled: true
 logging:
   level:
     org.hibernate.SQL: debug
